--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -45,8 +45,7 @@
     <footer class="site-footer">
       {% if site.github.is_project_page %}
       <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a>
-        is maintained by a team of contributors from the University of Cambridge and the University of Oxford. Visit the repository on GitHub for
-        more information.</span>
+        is maintained by Yaël Dillies from Stockholm Universitet, Kin Yau James Wong from UNC Chapel Hill and Kalle Kytölä from Aalto University.</span>
       {% endif %}
     </footer>
   </main>
